Use Integer.valueOf instead of boxing.